--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,11 @@ input[type="radio"].visually-hidden {
     visibility: hidden;
     width: 1px;
     height: 1px;
+    font-size: 0;
+}
+
+.search-label {
+    font-size: 0;
 }
 
 .search-form {
@@ -272,6 +277,7 @@ input[type="radio"].visually-hidden {
 
 .search-input {
     width: 100%;
+    height: 32px;
     padding-left: 39px;
     font:inherit;
     color: rgba(0, 0, 0, 0.3);
@@ -285,7 +291,7 @@ input[type="radio"].visually-hidden {
 }
 
 .search-input:focus {
-    color: #000000;
+    color: rgba(0, 0, 0, 1);
 }
 
 .search-form::before {
@@ -1625,13 +1631,14 @@ input[type="radio"].visually-hidden {
     margin-right: 0;
     font-size: 0;
     position: relative;
-    width: 25px;
+    width: 27px;
 }
 
 .htmlacademy::before {
     position: absolute;
     content: "";
     background: url("../img/logo-html.svg") no-repeat;
+    background-size: 27px;
     width: 27px;
     height: 35px;
     top:-21px;
@@ -1852,7 +1859,8 @@ input[type="radio"].visually-hidden {
     padding-top: 19px;
     padding-left: 20px;
     padding-bottom: 84px;
-    outline: none;
+    outline: 0 solid #f2f2f2;
+    overflow: auto;
 }
 
 .write-form input[type="text"],
@@ -1921,7 +1929,6 @@ input[type="radio"].visually-hidden {
 .catalog-container {
     margin: 0;
     padding: 0;
-    padding-top: 37px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
@@ -2037,7 +2044,7 @@ input[type="radio"].visually-hidden {
 
 .filters {
     position: relative;
-    width: 468px;
+    width: 328px;
     margin: 0;
     padding: 0;
     background-color: #ebebeb;
@@ -2061,7 +2068,7 @@ input[type="radio"].visually-hidden {
 
 .filters-title-wrap {
     position: relative;
-    width: 100%;
+    width: 328px;
     background-color: #d9d9d9;
     text-align: right;
 }
@@ -2779,6 +2786,11 @@ input[type="radio"].visually-hidden {
 .main-header-catalog .wrapper {
     padding-bottom: 0;
 }
+
+.main-header-catalog {
+    margin-bottom: 37px;
+}
+
 
 .footer-user-navigation-link-logout a:first-child {
     position: relative;
